# nexpylib

./: .gitignore  .pre-commit-config.yaml  ALTERNATIVE_IMPLEMENTATION_SUMMARY.md  CHANGELOG.md  COMPREHENSIVE_PERFORMANCE_RESULTS.md  CONTRIBUTING.md  CUSTOM_CALLBACKS_WITH_FLOAT_ACCURACY.md  DOCUMENTATION_REVIEW_REPORT.md  DOCUMENTATION_UPDATE_SUMMARY.md  GUI_PERFORMANCE_ANALYSIS.md  Makefile  PERFORMANCE_ANALYSIS.md  PUBLISHING_INSTRUCTIONS.md  PULL_REQUEST_v0.4.0.md  README.md  RELEASE_NOTES_v0.1.0.md  RELEASE_NOTES_v0.3.0.md  RELEASE_NOTES_v0.4.0.md  SUBMIT_3_PERFORMANCE_RESULTS.md  SUBMIT_3_SAFETY_ANALYSIS.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: publish-to-pypi.yml
demos/: README.md  basic_usage.py  configuring_float_accuracy.py  custom_equality_callbacks.py  custom_nexus_managers.py  custom_numerical_types.py
docs/: api.rst  api_reference.md  architecture.md  concepts.md  conf.py  contributing.rst  examples.md  examples.rst  index.rst  installation.rst  internal_sync.md  quickstart.rst  usage.md
src/nexpy/: __init__.py  _version.py
src/nexpy/core/: __init__.py
src/nexpy/foundations/: __init__.py  carries_single_hook_protocol.py  carries_some_hooks_protocol.py  serializable_protocol.py  x_adapter_base.py  x_base.py  x_composite_base.py  x_singleton_base.py
tests/: README_complex_test.md  __init__.py  conftest.py  run_tests.py  test_adaptive_submission.py  test_base.py  test_basic_memory.py  test_collective_hooks.py  test_comprehensive_performance_analysis.py  test_default_module.py  test_emitter_hooks.py  test_hook_capabilities.py  test_hook_listeners.py  test_memory_leaks.py  test_nexpy.py  test_observable_block_none.py  test_observable_memory_leak.py  test_observable_memory_leaks_simple.py  test_observable_multi_selection_option.py  test_observable_optional_default_selection_dict.py  test_observables_list.py  test_performance.py  test_publisher_subscriber.py  test_reactive_objects.py  test_secondary_hook_protection.py  test_secondary_hooks.py  test_thread_safety.py  test_write_report.py  test_x_block_none.py  test_x_default_selection_dict.py  test_x_list.py  test_x_memory_leaks_simple.py  test_x_multi_selection_option.py  test_x_optional_adapterpy  test_x_optional_default_selection_dict.py  test_x_rooted_paths.py  test_x_selection_dict.py  test_x_selection_option.py  test_x_set.py  test_x_set_sequence_adapter.py  (+3 more)
(+83 files in other folders)
